# size-of

./: .gitignore  Cargo.toml  Changelog.md  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml
.github/workflows/: main.yml
size-of-derive/: Cargo.toml  release.toml
size-of-derive/src/: lib.rs
src/: collections.rs  core_impls.rs  human_bytes.rs  lib.rs  macros.rs  pointers.rs  std_impls.rs
src/arch/: aarch64.rs  arm.rs  mod.rs  powerpc.rs  wasm.rs  x86_64.rs
src/support/: ahash.rs  arcstr.rs  bigdecimal.rs  chrono.rs  fxhash.rs  hashbrown.rs  mod.rs  num_bigint.rs  ordered_float.rs  portable_simd.rs  rust_decimal.rs  time.rs  xxhash_rust.rs
src/tests/: mod.rs
src/tests/pass/: derive_enum.rs  derive_struct.rs  recursive.rs  skip_all.rs
