[package]
name = "size-of"
version = "0.1.1"
description = "A crate for measuring the total memory usage of an object"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Kixiron/size-of"
keywords = [
    "memory",
    "heapsize",
    "profiling",
    "memory-usage",
    "memory-profiling",
]
categories = [
    "no-std",
    "development-tools",
    "memory-management",
    "development-tools::debugging",
    "development-tools::profiling",
]

[features]
default = ["derive", "std"]
std = []
derive = ["size-of-derive"]
time-std = ["time", "time/std", "std"]
ahash-std = ["ahash", "ahash/std", "std"]

[dependencies]
size-of-derive = { version = "0.1.0", path = "./size-of-derive", optional = true }

# Crate support
ahash = { version = "0.8.0", optional = true }
arcstr = { version = "1.1.4", optional = true }
fxhash = { version = "0.2.1", optional = true }
chrono = { version = "0.4.22", optional = true }
hashbrown = { version = "0.12.3", optional = true }
rust_decimal = { version = "1.26.1", optional = true }
ordered-float = { version = "3.0.0", optional = true }
time = { version = "0.3.15", default-features = false, optional = true }

[dev-dependencies]
trybuild = "1.0.64"
size-of-derive = { version = "0.1.0", path = "./size-of-derive" }

[workspace]
members = ["size-of-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
